# dsrna-designer

./: .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  mcp_config.json  pyproject.toml  setup_blast_db.sh
.deepagents/: agent.md
.deepagents/skills/design-dsrna/: SKILL.md
.deepagents/skills/design-dsrna/scripts/: plot_candidates.py
.deepagents/skills/fetch-genome/: SKILL.md
.deepagents/skills/generate-report/scripts/: create_dashboard.py
.deepagents/skills/identify-genes/: SKILL.md
.deepagents/skills/identify-genes/scripts/: plot_genes.py
.deepagents/skills/literature-search/: SKILL.md
.deepagents/skills/literature-search/scripts/: plot_literature.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
docs/: TASKS.md  agent-redesign-plan.md  deepagents-api.md  implementation-plan-v3.md  implementation-plan.md  implementation-tasks.md  technical-plan-v2.md
dsrna_agent/: __init__.py  agent.py  graph.py  mcp_middleware.py  tools.py
dsrna_agent/skills/blast-screen/: SKILL.md
dsrna_agent/skills/design-dsrna/: SKILL.md
dsrna_agent/skills/fetch-genome/: SKILL.md
dsrna_agent/skills/full-workflow/: SKILL.md
dsrna_agent/skills/generate-report/: SKILL.md
dsrna_agent/skills/identify-genes/: SKILL.md
dsrna_agent/skills/literature-search/: SKILL.md
dsrna_agent/skills/score-rank/: SKILL.md
trace-output/: 019b93d1-b464-74f0-af18-acc3046c4156.json  019b93d8-669b-7712-af2f-476542e3b09a.json  019bbd8a-63d2-7840-8b7b-397c7b17fd08.json
(+10 files in other folders)
